[package]
name = "bull-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib] 
name ='bull'
path="lib/mod.rs"

[[bin]] 
 name="bull_rs"
 path="src/main.rs"
[dependencies]
anyhow = "1.0.70"
bincode = {version = "1.3.3"}
async-trait = "0.1.68"
deadpool-redis = {version = "0.12.0",features = ["rt_tokio_1"]}
derive-redis-json = "0.1.1"
dotenv_codegen = "0.15.0"
erased-serde = "0.3.25"
futures = "0.3.28"
maplit = "1.0.2"
rand = "0.8.5"
redis = {version ="0.23.0",features = ["tokio-comp"]}
rmp = "0.8.11"
serde = {version="1.0.160",features=["derive"]}
serde_json = "1.0.96"
tokio = {version="1.28.0",features = ["full"]}
uuid = {version="1.3.3",features = ["v4"]}
chrono = "0.4.26"
tokio-js-set-interval = "1.3.0"

