[package]
name = "bull-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib] 
name ='bull'
path="lib/mod.rs"

[[bin]] 
 name="bull_rs"
 path="src/main.rs"
[dependencies]
anyhow = "1.0.70"

async-trait = "0.1.68"
deadpool-redis = {version = "0.13.0",features = ["rt_tokio_1"]}
derive-redis-json = "0.1.1"
erased-serde = "0.3.25"
futures = "0.3.28"
maplit = "1.0.2"
rand = "0.8.5"
redis = {version ="0.23.0",features = ["tokio-comp","streams"]}
rmp = "0.8.11"
serde = {version="1.0.160",features=["derive"]}
serde_json = "1.0.96"
tokio = {version="1.28.0",features = ["fs","rt","rt-multi-thread"]}
uuid = {version="1.3.3",features = ["v4"]}
async-event-emitter = "0.1.2"
chrono = "0.4.31"
rmp-serde = "1.1.2" 
rmpv = "1.0.1"
faker = { version = "0.0.4", optional = true }
dotenv = "0.15.0"


# standard crate data is left out
[dev-dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot"]}
tokio-shared-rt = "0.1.0"

