[package]
name = "bull-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = 'bull'
path = "lib/mod.rs"
[dependencies]

async-trait = "0.1.68"
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
derive-redis-json = "0.1.1"
futures = "0.3.28"
maplit = "1.0.2"
rand = "0.8.5"
redis = { version = "0.27.0", features = ["tokio-comp", "streams"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
redis-derive = "0.1.7"
redis-json = "0.0.1-beta-1"
async-atomic = "0.1.4"
num_cpus = "1.16.0"
rmp = "0.8.14"
rmp-serde = "1.3.0"
thiserror = "1.0.63"
backtrace = "0.3.74"
async-backtrace = "0.2.7"
derive_more = { version = "1.0.0", features = ["display"] }
tokio-util = "0.7.12"


# standard crate data is left out
[dev-dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot"] }
tokio-shared-rt = "0.1.0"
lazy_static = "1.4.0"
